@@ -8,14 +8,14 @@ IF [%S1TBX_HOME:~-1%]==[/] set S1TBX_HOME=%S1TBX_HOME:~0,-1%
 IF [%S1TBX_HOME:~-1%]==[\] set S1TBX_HOME=%S1TBX_HOME:~0,-1%
 
 "%S1TBX_HOME%\jre\bin\java.exe" ^
-	-server -Xms512M -Xmx3000M -XX:PermSize=512m -XX:MaxPermSize=512m -Xverify:none ^
-    -XX:+AggressiveOpts -XX:+UseFastAccessorMethods -XX:CompileThreshold=10000 ^
+	-server -Xms512M -Xmx3000M -Xverify:none ^
+    -XX:+AggressiveOpts -XX:+UseFastAccessorMethods ^
     -XX:+UseParallelGC -XX:+UseNUMA -XX:+UseLoopPredicate -XX:+UseStringCache ^
-    -Dceres.context=s1tbx ^
-    -Ds1tbx.debug=true ^
-    -Ds1tbx.consoleLog=true ^
-    -Ds1tbx.logLevel=INFO ^
-    "-Dnest.home=%S1TBX_HOME%" ^
+    "-Dceres.context=s1tbx" ^
+    "-Ds1tbx.debug=true" ^
+    "-Ds1tbx.consoleLog=true" ^
+    "-Ds1tbx.logLevel=INFO" ^
+    "-Ds1tbx.home=%S1TBX_HOME%" ^
     -jar "%S1TBX_HOME%\bin\snap-launcher.jar" -d %*
 
 exit /B 0
